c2prj1_cards/grade.txt
Grading at Fri Jul  3 11:02:40 UTC 2020
Compiling cards.c
cards.c: In function ‘make_empty_card’:
cards.c:189:23: error: ‘EMPTY_CARD_VALUE’ undeclared (first use in this function)
   empty_card->value = EMPTY_CARD_VALUE;
                       ^
cards.c:189:23: note: each undeclared identifier is reported only once for each function it appears in
cards.c:190:22: error: ‘EMPTY_CARD_SUIT’ undeclared (first use in this function)
   empty_card->suit = EMPTY_CARD_SUIT;
                      ^
cards.c: In function ‘is_empty_card’:
cards.c:198:23: error: ‘EMPTY_CARD_VALUE’ undeclared (first use in this function)
   return (c->value == EMPTY_CARD_VALUE) && (c->suit == EMPTY_CARD_SUIT);
                       ^
cards.c:198:56: error: ‘EMPTY_CARD_SUIT’ undeclared (first use in this function)
   return (c->value == EMPTY_CARD_VALUE) && (c->suit == EMPTY_CARD_SUIT);
                                                        ^
cards.c:199:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Could not compile your card.c!

Overall Grade: FAILED
